tests/bytes-param/duplicate-parameters.stderr
error: encountered duplicate `bytes` parameter: duplicate set to 4
 --> $DIR/duplicate-parameters.rs:4:23
  |
4 | #[bitfield(bytes = 4, bytes = 4)]
  |                       ^^^^^

error: previous `bytes` parameter here
 --> $DIR/duplicate-parameters.rs:4:12
  |
4 | #[bitfield(bytes = 4, bytes = 4)]
  |            ^^^^^
